--- a/css/styles.css
+++ b/css/styles.css
@@ -17,6 +17,7 @@
     padding: 50px 60px;
     border: 1px solid #dde0e8;
     margin: 100px auto;
+    margin-bottom: 60px;
     box-shadow: 0 0 3em #dfdfdf;
 }
 
@@ -190,4 +191,23 @@ input::placeholder {
 
 .notificacion h5 span{
     font-weight: 700;
+}
+
+footer{
+    margin: 0;
+}
+
+footer h2{
+    width: 100%;
+    text-align: center;
+    background-color: #eed1df;
+    padding: 30px;
+    font-size: 15px;
+
+}
+
+footer a{
+    text-decoration: none;
+    color: #b75e87;
+;
 }
